> change thermometer to a shade of red that is visible to people with red/green colorblindness
# 3.14.00 (51133) Apr 25, 2011
> added new translation credits features
# 3.13.02 (51024) Apr 21, 2011
# 3.13.01 (51019) Apr 21, 2011
# 3.13.00 (48272) Jan 26, 2011
> localization fixes
# 3.12.01 (48197) Jan 24, 2011
1/13/11 #2666, localize "Atm" and "Set"
10/7/10 #2537, localize "height" and add pt_BR translation 
# 3.12.00 (38433) Feb 5, 2010
> fix Energy histogram
# 3.11.01 (38406) Feb 4, 2010
2/4/10 fix jumpy Energy histogram #2149
# 3.11.00 (38005) Jan 10, 2010
1/10/10 public version for milestone "full redeploy, 2010 Q1"
# 3.10.01 (37359) Dec 11, 2009
12/11/09 test version for milestone "full redeploy, 2010 Q1"
12/07/09 use PaintImmediateDialog throughout, #89
# 3.10.00 (30667) Apr 21, 2009
4/21/09 Batch deploy as part of IOM milestone with revision 30666
# 3.09.00 (30610) Apr 20, 2009
4/20/09 Batch deploy as part of IOM milestone with revision 30609
# 3.08.11 (30255) Apr 6, 2009
4/6/09 dev version for verifying #1385
# 3.08.10 (30233) Apr 6, 2009
4/6/09 > remove extraneous image resize, see #1375
# 3.08.09 (30126) Mar 31, 2009
3/31/09 deploy dev version for verification of fixes
3/25/09 #1497, fixed and rewrote InputTemperatureControl
# 3.08.08 (29629) Mar 22, 2009
3/22/09 Batch deploy for Alpha Simulation Tests 2, svn 29628
# 3.08.07 (28795) Feb 19, 2009
Batch deploy for alpha Simulation Tests, svn 28773
1-9-2009: #821, improper sharing of clocks between modules
10-8-2008: convert to new PhetApplicationConfig framework

New in 3.08.06 (10-8-2008)
>Removed unnecessary help items from reversible reactions sim 

7-19-2007: converted particle count spinners to value based instead of difference based

3.05.07 (6-8-2007)
(same as 3.05.05)

3.05.05 (6-8-2007)
Renamed 'advanced-gas' to 'reversible-reactions'
Trial fix for "molecules stick to right wall and pass through left wall" bug in reversible-reactions module.